--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-hello-world-simple",
+  "name": "vue-hello-world-simple-bang",
   "version": "0.1.0",
   "private": false,
   "scripts": {
