--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-library": "vue-cli-service build --target lib --name vue-hello-world-simple ./src/install.js",
     "lint": "vue-cli-service lint"
   },
+  "main" : ".dist/vue-hello-world-simple.common.js",
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
