--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-library": "vue-cli-service build --target lib --name vue-hello-world-simple ./src/install.js",
+    "build-library": "vue-cli-service build --target lib --name vue-hello-world-simple-bang ./src/install.js",
     "lint": "vue-cli-service lint"
   },
   "main": ".dist/vue-hello-world-simple-bang.common.js",
